# Core

./: CMakeLists.txt  LICENSE.md  README.md
fs/: CMakeLists.txt
fs/app/: fs.c  log.c  main.c
fs/inc/: err.h  fs.h  log.h
